--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "http://alexandrebelloni.com/makeitreal",  
+  "homepage": "http://alexandrebelloni.com/makeitreal",
   "dependencies": {
     "bootstrap": "^4.1.1",
     "react": "^16.4.0",
+    "react-calendar": "^2.15.1",
     "react-dom": "^16.4.0",
     "react-scripts": "1.1.4",
-    "reactstrap": "^6.0.1"  
+    "reactstrap": "^6.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
