--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "react": "^16.4.0",
     "react-calendar": "^2.15.1",
     "react-dom": "^16.4.0",
+    "react-router": "^4.3.0",
+    "react-router-dom": "^4.3.0",
     "react-scripts": "1.1.4",
     "reactstrap": "^6.0.1"
   },
